--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "nextjs-template",
     "react-dashboard",
     "bootstrap 5"
-    ],
-   "scripts": {
+  ],
+  "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -31,9 +31,12 @@
   "dependencies": {
     "@vercel/analytics": "^1.0.1",
     "apexcharts": "^3.41.1",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.12",
     "node-sass": "^9.0.0",
     "prism-react-renderer": "^2.0.6",
