--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.0.1",
     "apexcharts": "^3.41.1",
+    "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.1",
     "eslint": "8.46.0",
