--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.5",
     "@vercel/analytics": "^1.0.1",
     "apexcharts": "^3.41.1",
     "axios": "^1.6.5",
