--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.11.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "js-cookie": "^3.0.5",
@@ -55,6 +56,7 @@
     "react-feather": "^2.0.10",
     "react-responsive": "^9.0.2",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^10.0.4",
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
     "simplebar": "^6.2.5",
