--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-sass": "^9.0.0",
     "prism-react-renderer": "^2.0.6",
     "react": "18.2.0",
+    "react-advanced-cropper": "^0.19.4",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
@@ -54,6 +55,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
+    "react-resizable": "^3.0.5",
     "react-responsive": "^9.0.2",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^10.0.4",
