--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "dashui-free-nextjs-admin-template",
+  "name": "globalsolutions",
   "version": "1.1.0",
   "private": true,
   "author": {
-    "name": "codescandy",
-    "url": "https://codescandy.com"
+    "name": "GlobalSolutions",
+    "url": "https://globsolutions.in/"
   },
   "keywords": [
     "react",
