--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.5",
+    "@mui/x-date-pickers": "^7.1.0",
     "@vercel/analytics": "^1.0.1",
     "apexcharts": "^3.41.1",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.3",
+    "dayjs": "^1.11.10",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "js-cookie": "^3.0.5",
