--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.3",
+    "cdbreact": "^1.5.18",
     "dayjs": "^1.11.10",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
@@ -56,6 +57,7 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
